Update Условия конкурса по мобильному тестированию.md

--- a/Условия конкурса по мобильному тестированию.md
+++ b/Условия конкурса по мобильному тестированию.md
@@ -9,9 +9,11 @@
 
 _Пример:_
 
-```2+2 4```
-
-```2*2/2 error```
+```
+2+2 4
+151/100 1
+2*2/2 error
+```
 
 Мы подготовили несколько версий алгоритма с багами. Ваши тесты мы запустим на каждой версии алгоритма. Если хотя бы один тест находит баг, то вы получаете очко. При равенстве очков выбирается участник, написавший меньшее количество тестов. Если количество тестов одинаково, то выбираем участника, который загрузил файл раньше.
 
