Update Условия конкурса по мобильному тестированию.md

--- a/Условия конкурса по мобильному тестированию.md
+++ b/Условия конкурса по мобильному тестированию.md
@@ -18,4 +18,4 @@ _Пример:_
 Мы подготовили несколько версий алгоритма с багами. Ваши тесты мы запустим на каждой версии алгоритма. Если хотя бы один тест находит баг, то вы получаете очко. При равенстве очков выбирается участник, написавший меньшее количество тестов. Если количество тестов одинаково, то выбираем участника, который загрузил файл раньше.
 
 
-Трем участникам, набравшим больше всего очков, отправим набор крутого мерча. Итоги конкурса подведем 13 августа. Участвовать можно даже если вы не собираетесь на митап. 
+Трем участникам, набравшим больше всего очков, отправим набор крутого мерча. Итоги конкурса подведем 11 августа во время Avito Mobile Testing Meetup. Участвовать можно даже если вы не собираетесь на мероприятие. 
