Update Условия конкурса по мобильному тестированию.md

--- a/Условия конкурса по мобильному тестированию.md
+++ b/Условия конкурса по мобильному тестированию.md
@@ -2,6 +2,8 @@
 
 Представьте, что вы тестируете некий код, но сам код вы не видите и знаете только требования к нему.
 
+Требования к коду, который вы тестируете:
+
 На вход подается строка, содержащее алгебраическое выражение (например, `2+2`), валидная строка матчится регуляркой `^-?[0-9]{1,5}[-+/*][0-9]{1,5}$`. Нужно вывести результат операции. Например, `4`.
 Если данные невалидны или результат нельзя вычислить, вывести `error`.
 
@@ -15,7 +17,6 @@ _Пример:_
 2*2/2 error
 ```
 
-Мы подготовили несколько версий алгоритма с багами. Ваши тесты мы запустим на каждой версии алгоритма. Если хотя бы один тест находит баг, то вы получаете очко. При равенстве очков выбирается участник, написавший меньшее количество тестов. Если количество тестов одинаково, то выбираем участника, который загрузил файл раньше.
-
+Мы подготовили несколько версий алгоритма с багами. Ваши тесты мы запустим на каждой версии алгоритма. Если хотя бы один тест находит баг в алгоритме, то вы получаете очко. За каждый неправильный тест снимается 1 очко. При равенстве очков выбирается участник, написавший меньшее количество тестов. Если количество тестов одинаково, то выбираем участника, который ответил раньше.
 
 Трем участникам, набравшим больше всего очков, отправим набор крутого мерча. Итоги конкурса подведем 11 августа во время Avito Mobile Testing Meetup. Участвовать можно даже если вы не собираетесь на мероприятие. 
