Update Условия конкурса по мобильному тестированию.md

--- a/Условия конкурса по мобильному тестированию.md
+++ b/Условия конкурса по мобильному тестированию.md
@@ -17,6 +17,6 @@ _Пример:_
 2*2/2 error
 ```
 
-Мы подготовили несколько версий алгоритма с багами. Ваши тесты мы запустим на каждой версии алгоритма. Если хотя бы один тест находит баг в алгоритме, то вы получаете очко. За каждый неправильный тест снимается 1 очко. При равенстве очков выбирается участник, написавший меньшее количество тестов. Если количество тестов одинаково, то выбираем участника, который ответил раньше.
+Мы подготовили несколько версий алгоритма с багами (N версий). Ваши тесты мы запустим на каждой версии алгоритма. Если хотя бы один тест находит баг в алгоритме, то вы получаете очко (то есть максимум N очков). За каждый неправильный тест снимается 1 очко. При равенстве очков выбирается участник, написавший меньшее количество тестов. Если количество очков и тестов одинаково, то выбираем участника, который ответил раньше.
 
 Трем участникам, набравшим больше всего очков, отправим набор крутого мерча. Итоги конкурса подведем 11 августа во время Avito Mobile Testing Meetup. Участвовать можно даже если вы не собираетесь на мероприятие. 
